--- a/publications.html
+++ b/publications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="assets/css/styles.css">
+<link rel="stylesheet" href="assets/css/style.css">
 <meta name="keywords" content="Christian Igel,publications,neural networks,evolutionary algorithms,evolutionary computation,support vector machines,SVM,SVMs,machine learning"> 
 <title>Christian's Publications</title>
 </head>
