--- a/publications.html
+++ b/publications.html
@@ -201,23 +201,23 @@ Research</em> <vol>7</vol>, pp. 1437-1466, 2006 <a
  href="downloads.php#wss" class="sup">source code</a></div>
 
 
-<h1>Publications by Christian Igel</h1>
-This material is presented to ensure timely dissemination of scholarly
-and technical work. Copyright and all rights therein are retained by
-authors or by other copyright holders. All persons copying this
-information are expected  to adhere to the terms and constraints invoked
-by each author's copyright.  In many cases, these works may not be
-reposted without the explicit permission  of the copyright holder.
+<h2>Publications by Christian Igel</h2> This material is presented to
+ensure timely dissemination of scholarly and technical work. Copyright
+and all rights therein are retained by authors or by other copyright
+holders. All persons copying this information are expected to adhere
+to the terms and constraints invoked by each author's copyright.  In
+many cases, these works may not be reposted without the explicit
+permission of the copyright holder.
 
 More papers can be downloaded from my <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ&hl=de">Google
 scholar profile</a>.
 
-<h2>Contributions to journals, books, and conferences</h2>
+<h3>Contributions to journals, books, and conferences</h3>
 
 <h4>Coming soon</h4><a name="top"></a> 
 
 <div class=publication>
-Fabian Gieseke, Kai Polsterer, Ashish Mahabal, Christian Igel, and Tom
+Fabian Gieseke, Kai Polsterer, Ashish Mahabal, Christian Igel, and Tom <!--  -->
   Heskes. Massively-Parallel Best Subset Selection for Ordinary Least-Squares Regression. <em>IEEE Symposium Series on
 Computational Intelligence (SSCI 2017)</em>, IEEE Press, accepted
 </div>
@@ -1425,7 +1425,7 @@ Intelligence - Theory and Applications</em>, LNCS <vol>1226</vol>, pp. 179-188, 
 
 
 
-<h2>Edited Conference Proceedings</h2>
+<h3>Edited Conference Proceedings</h3>
 
 <div class=publication>
 Christian Igel <em>et al.</em>: <em> Proceedings of the Sixteenth International
@@ -1456,7 +1456,7 @@ Intelligent Systems (HIS 2007)</em>, IEEE Computer Society, 2007 </div>
 
 
 
-<h2>Theses</h2>
+<h3>Theses</h3>
 <div class=publication>
 Christian Igel.  <em>Optimization of Support Vector Machines</em>, Habiltation thesis, Faculty of Electrical Engineering and Information Technology, Ruhr-Universit&auml;t Bochum, 2010</div>
 
@@ -1471,7 +1471,7 @@ Christian Igel.  <em>Untersuchungen zur Kettenregel f&uuml;r Fuzzy-Regeln und Re
 implikationsbasierter Semantik</em>, Diploma thesis, University of Dortmund, Department of Computer Science, 1997</div>
 
 
-<h2>Abstracts and not peer-reviewed contributions to conferences</h2>
+<h3>Abstracts and not peer-reviewed contributions to conferences</h3>
 
 <div class=publication>
 Lauge Sørensen, Christian Igel, and Mads Nielsen. MCI trial enrichment using MRI hippocampus texture. <em>Alzheimer’s & Dementia: The Journal of the Alzheimer’s Association</em>, 2016.
@@ -1657,7 +1657,7 @@ Zur Auslegung von thermisch und stofflich gekoppelten Destillationskolonnen mit 
 </div>
 
 
-<a name="irini"></a><h2>Technical reports</h2>
+<a name="irini"></a><h3>Technical reports</h3>
 
 <div class=publication>
 &Uuml;r&uuml;n Dogan, Tobias Glasmachers, and Christian Igel.
