--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,7 @@
 
 
 <p><img src="images/CSUPicture.jpeg" style="height: 180px;
-margin: 10px 10px 10px 10px;" align="right" alt="Image of Me"> </p>
+margin: 10px 10px 100px 10px;" align="left" alt="Image of Me"> </p>
 <h1>Christian Igel</h1>
 Professor, Dr. habil.
 
@@ -33,8 +33,7 @@ Professor, Dr. habil.
       <tr><td>2100 K&#248;benhavn &Oslash;</td></tr>
     </tbody>
   </table>
-</dl>
-<dl>
+  <br>
   <table cellspacing="0" cellpadding="0" nosave="">
     <tbody>
       <tr>
@@ -83,8 +82,8 @@ and applications of these methods.
 
 
 <h3>Selected Publications</h3>
-Please click <a href="publications.php">here</a> for a  <a
-href="publications.php">full list</a>.
+Please click <a href="#publications">here</a> for a  <a
+href="#publications">full list</a>.
 I also  maintain a <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ&hl=de">Google
 scholar profile</a>.
 <p>
@@ -168,8 +167,7 @@ Maximum Likelihood Model Selection for 1-Norm Soft Margin SVMs with Multiple Par
 Suttorp</a>, <a href="http://www.lri.fr/~hansen">Nikolaus Hansen</a>,
 and Christian Igel. Efficient Covariance Matrix Update for Variable
 Metric Evolution Strategies. <em>Machine Learning</em> <vol>75</vol>,
-pp. 167-197, 2009 <a href="downloads.php#ElitistCMA"
-class="sup">source code</a> </div>-->
+pp. 167-197, 2009</div>-->
 
 
 <div class=publication><a
@@ -197,9 +195,10 @@ class="sup">source code</a></div>
 Glasmachers</a> and Christian Igel. <a
  href="http://jmlr.csail.mit.edu/papers/volume7/glasmachers06a/glasmachers06a.pdf">Maximum-Gain
 Working Set Selection for SVMs</a>. <em>Journal of Machine Learning
-Research</em> <vol>7</vol>, pp. 1437-1466, 2006 <a
- href="downloads.php#wss" class="sup">source code</a></div>
+Research</em> <vol>7</vol>, pp. 1437-1466, 2006</div>
 
+<br>
+ 
 
 <h2>Publications by Christian Igel</h2> This material is presented to
 ensure timely dissemination of scholarly and technical work. Copyright
@@ -212,19 +211,27 @@ permission of the copyright holder.
 More papers can be downloaded from my <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ&hl=de">Google
 scholar profile</a>.
 
+<a name="publications"></a>
 <h3>Contributions to journals, books, and conferences</h3>
 
 <h4>Coming soon</h4><a name="top"></a> 
 
 <div class=publication>
+  Ciprian Florescu and Christian Igel.
+  <a href="https://openreview.net/forum?id=r1R0o7yDz">Resilient Backpropagation (Rprop) for Batch-learning in TensorFlow</a>.
+  <em>6th International Conference on Learning Representations
+  Workshop Track (ICLR 2018 Workshop Track)</em>, 2018
+</div>
+
+<div class=publication>
 Fabian Gieseke, Kai Polsterer, Ashish Mahabal, Christian Igel, and Tom <!--  -->
   Heskes. Massively-Parallel Best Subset Selection for Ordinary Least-Squares Regression. <em>IEEE Symposium Series on
-Computational Intelligence (SSCI 2017)</em>, IEEE Press, accepted
+Computational Intelligence (SSCI 2017)</em>, IEEE Press, in press
 </div>
 
 <div class=publication>
 Jan Kremer, Fei Sha, and Christian Igel. Robust Active Label Correction. <em>International Conference on 
-Artificial Intelligence and Statistics (AISTATS)</em>, accepted
+Artificial Intelligence and Statistics (AISTATS)</em>, in press
 </div>
 
  
