--- a/downloads.html
+++ b/downloads.html
@@ -36,7 +36,7 @@ video lecture</a> on Shark.
  
 <h3>Paper describing the library</h3> 
  
-<div class=publication>Christian Igel, <a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Heidrich-Meisner">Verena Heidrich-Meisner</a>, and <a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias Glasmachers</a>.  <a href="http://jmlr.csail.mit.edu/papers/volume9/igel08a/igel08a.pdf">Shark</a>.
+<div class=publication>Christian Igel, <a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Heidrich-Meisner">Verena Heidrich-Meisner</a>, and <a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a>.  <a href="http://jmlr.csail.mit.edu/papers/volume9/igel08a/igel08a.pdf">Shark</a>.
 <em>Journal of Machine Learning Research</em> <vol>9</vol>, pp. 993-996,
 2008</div>
 
@@ -101,13 +101,13 @@ machine learning library</a>.
 <h3>Supplementary material</h3> 
  
 <a href="wss/lemma8.c">This program</a> checks all 2,834,352 cases considered for the proof of Lemma&nbsp;8. However, in the meantime <a
-href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias Glasmachers</a> found a much more elegant proof:<p> 
+href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a> found a much more elegant proof:<p> 
  
-<div class=publication><a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias Glasmachers</a>. On Related Violating Pairs for Working Set Selection in SMO Algorithms. In M. Verleysen, ed.: <em>16th European Symposium on Artificial Neural Networks (ESANN 2008)</em>. Evere, Belgien: d-side publications, 2008</div> 
+<div class=publication><a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a>. On Related Violating Pairs for Working Set Selection in SMO Algorithms. In M. Verleysen, ed.: <em>16th European Symposium on Artificial Neural Networks (ESANN 2008)</em>. Evere, Belgien: d-side publications, 2008</div> 
  
 <h3>Paper describing the algorithm</h3> 
 
-<div class=publication><a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias Glasmachers</a> and Christian Igel.
+<div class=publication><a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a> and Christian Igel.
 <a href="http://jmlr.csail.mit.edu/papers/volume7/glasmachers06a/glasmachers06a.pdf">Maximum-Gain Working Set
 Selection for SVMs</a>. <em>Journal of Machine Learning Research</em> <vol>7</vol>, pp. 1437-1466, 2006</div> 
  
@@ -144,7 +144,7 @@ can be downloaded <a href="solasvm/2nd-order-LASVM.tar.gz">here</a>.
 <a href="http://jmlr.csail.mit.edu/papers/v6/bordes05a.html">Fast Kernel Classifiers with Online and Active Learning</a>. <em>Journal of Machine
 Learning Research</em> <vol>5</vol>,  pp. 1579-1619, 2005</div> 
  
-<div class=publication><a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias Glasmachers</a> and Christian Igel.
+<div class=publication><a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a> and Christian Igel.
 Second Order SMO Improves SVM Online and Active Learning.
 <em>Neural Computation</em> <vol>20</vol>(2), pp. 374–382, 2008
 </div> 
@@ -255,7 +255,7 @@ click  <a href="oligo/oligo.cpp">here</a>.
  
 <h3>References</h3> 
  
-<div class=publication>Christian Igel, <a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias
+<div class=publication>Christian Igel, <a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias
 Glasmachers</a>, Britta
 Mersch, Nico Pfeifer, and <a href="http://gobics.de/peter">Peter
 Meinicke</a>. <a href="paper/GBOoKTAfSKAtBGSD.pdf">Gradient-based Optimization of Kernel-Target Alignment
@@ -263,7 +263,7 @@ for Sequence Kernels Applied to Bacterial Gene Start
 Detection</a>. <em>IEEE/ACM Transactions on Computational Biology and
 Bioinformatics</em> <vol>4</vol>(2),  pp. 216-226, 2007</div> 
  
-<div class=publication>Britta Mersch, <a href="http://www.neuroinformatik.ruhr-uni-bochum.de/thbio/members/profil/Glasmachers">Tobias Glasmachers</a>, Peter
+<div class=publication>Britta Mersch, <a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a>, Peter
 Meinicke, and Christian Igel. <a href="paper/EOoSKfDoBGS.pdf">Evolutionary Optimization of Sequence
 Kernels for Detection of Bacterial Gene Starts</a>. <em>International
 Journal of Neural Systems</em> <vol>17</vol>(5), selected paper of
