--- a/index.html
+++ b/index.html
@@ -1003,8 +1003,8 @@ Roth.  <a href="http://www.mitpressjournals.org/doi/pdf/10.1162/evco.2007.15.1.1
 Optimization</a>. <em>Evolutionary Computation</em> <vol>15</vol>(1), pp. 1-28, 2007
 <a href="downloads.html#MOCMA" class="sup">source code</a></div>
 
-<div class=publication><img src="images/TCBB-0022-0206-Fig1.jpg"  align="left"
-vspace="10" hspace="20" width="30" alt="geometrical view on kernel-target
+<div class=publication><img src="images/TCBB-0022-0206-Fig1.jpg"  align="right"
+vspace="10" hspace="20" width="90" alt="geometrical view on kernel-target
 alignment used to adapt kernels for TIS detection">Christian Igel, <a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a>, Britta
 Mersch, Nico Pfeifer, and <a href="http://gobics.de/peter">Peter
 Meinicke</a>. <a href="paper/GBOoKTAfSKAtBGSD.pdf">Gradient-based Optimization of Kernel-Target Alignment
