--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 <p><img src="images/CSUPicture.jpeg" style="height: 180px;
-margin: 10px 10px 100px 10px;" align="left" alt="Image of Me"> </p>
+margin: 0px 50px 100px 0px;" align="left" alt="Image of Me"> </p>
 <h1>Christian Igel</h1>
 Professor, Dr. habil.
 
@@ -198,13 +198,7 @@ Research</em> <vol>7</vol>, pp. 1437-1466, 2006</div>
 <br>
  
 
-<h2>Publications by Christian Igel</h2> This material is presented to
-ensure timely dissemination of scholarly and technical work. Copyright
-and all rights therein are retained by authors or by other copyright
-holders. All persons copying this information are expected to adhere
-to the terms and constraints invoked by each author's copyright.  In
-many cases, these works may not be reposted without the explicit
-permission of the copyright holder.
+<h2>Publications by Christian Igel</h2>
 
 More papers can be downloaded from my <a href="http://scholar.google.dk/citations?user=d-jF4zIAAAAJ&hl=de">Google
 scholar profile</a>.
@@ -1700,6 +1694,17 @@ Technical Report, IRINI-2005-01,
 Operator Adaptation in Evolutionary Computation and 
 its Application to Structure Optimization of Neural Networks.
 Technical Report, IRINI-2001-03,
-     Institut f&uuml;r Neuroinformatik, 2001</div>
+  Institut f&uuml;r Neuroinformatik, 2001</div>
+
+
+<br>
+  <div class=footnote>The material on this page is presented to
+ensure timely dissemination of scholarly and technical work. Copyright
+and all rights therein are retained by authors or by other copyright
+holders. All persons copying this information are expected to adhere
+to the terms and constraints invoked by each author's copyright.  In
+many cases, these works may not be reposted without the explicit
+permission of the copyright holder.</div>
+
 </body>
 </html>
