--- a/downloads.html
+++ b/downloads.html
@@ -55,22 +55,11 @@ Christian  Igel.  <a href="http://jmlr.org/proceedings/papers/v32/gieseke14.pdf"
   <em>JMLR W&CP</em> <vol>32</vol> (ICML), pp. 172-180, 2014</div>
 
 
-<a name="nnratio"></a> 
-  <h2>nnratio</h2>
-<!--  <a href="https://github.com/kremerj/nnratio"><img alt="[nnratio]" vspace="10" hspace="20"  width="400" align=right src="http://github.com/kremerj/nnratio/blob/master/images/example.png" border=0></a>-->
+<a name="Shark"><br></a> 
 
-Go to <a href="https://github.com/kremerj/nnratio">nnratio</a> for a
-    nearest neighbor density ratio estimator implemented in Python.
-
-<h3>Paper describing the package</h3> 
-<div class=publication>Jan Kremer, Fabian Gieseke, Kim Steenstrup
-  Pedersen, and Christian Igel.  <a href="paper/NNDREfLSAiA.pdf">Nearest Neighbor Density 
-Ratio Estimation for Large-Scale Applications in
-  Astronomy</a>. <em>Astronomy and Computing</em> <vol>12</vol>, pp. 67-72, 2015</div>
+<p>
 
 
-
-<a name="Shark"></a> 
 <h2>Shark</h2> 
  
 The <a href="https://github.com/Shark-ML/Shark">Shark machine learning library</a> is a modular C++ library for the design and optimization of adaptive systems.
@@ -100,8 +89,23 @@ video lecture</a> on Shark.
 <em>Journal of Machine Learning Research</em> <vol>9</vol>, pp. 993-996,
 2008</div>
 
+<a name="nnratio"><br></a> 
+
 <p> 
 
+<h2>nnratio</h2>
+<!--  <a href="https://github.com/kremerj/nnratio"><img alt="[nnratio]" vspace="10" hspace="20"  width="400" align=right src="http://github.com/kremerj/nnratio/blob/master/images/example.png" border=0></a>-->
+
+Go to <a href="https://github.com/kremerj/nnratio">nnratio</a> for a
+    nearest neighbor density ratio estimator implemented in Python.
+
+<h3>Paper describing the package</h3> 
+<div class=publication>Jan Kremer, Fabian Gieseke, Kim Steenstrup
+  Pedersen, and Christian Igel.  <a href="paper/NNDREfLSAiA.pdf">Nearest Neighbor Density 
+Ratio Estimation for Large-Scale Applications in
+  Astronomy</a>. <em>Astronomy and Computing</em> <vol>12</vol>, pp. 67-72, 2015</div>
+
+<p>
 	
 <a name="svmmodelselection"><br></a> 
 
