added more images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" href="assets/css/style.css">
 <meta name="keywords" content="Christian Igel,publications,neural networks,evolutionary algorithms,evolutionary computation,support vector machines,SVM,SVMs,machine learning"> 
-<title>Christian's Publications</title>
+<title>Christian's Homepage</title>
 </head>
 
 
@@ -127,7 +127,7 @@ Classification</a>.
 <em>JMLR W&CP</em> <vol>38</vol> (AISTATS), pp. 259-267, 2015</div>
 
 
-<div class=publication>Fabian Gieseke, Justin Heinermann, Cosmin
+<div class=publication><a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Justin Heinermann, Cosmin
 Oancea, and Christian Igel.  <a
  href="http://jmlr.org/proceedings/papers/v32/gieseke14.pdf">Buffer
 k-d Trees: Processing Massive Nearest Neighbor Queries on GPUs</a>.
@@ -140,7 +140,7 @@ Learning (ICML). JMLR W&CP</em> <vol>32</vol>(1), pp. 172-180, 2014 <a href="htt
  </div> -->
 
  
- <!-- <div class=publication>Fabian Gieseke, Christian Igel, and Tapio
+ <!-- <div class=publication><a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Christian Igel, and Tapio
   Pahikkala. <a
   href="http://jmlr.org/proceedings/papers/v29/Gieseke13.pdf">Polynomial
   runtime bounds for fixed-rank unsupervised least-squares
