--- a/publications.html
+++ b/publications.html
@@ -57,15 +57,16 @@ Population-Contrastive-Divergence: Does Consistency help with RBM training?
 
 <a name="y17"></a>
 <h4>2017</h4>
-<div class=publication>
-  Fabian Gieseke, Cosmin Oancea, and Christian  Igel.
+<div class=publication><a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
+style="margin: 0px 10px 20px 10px"  width="200" align=right src="http://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
+  <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Oancea, and Christian  Igel.
  bufferkdtree: A Python Library for Massive Nearest Neighbor Queries on Multi-Many-Core Devices.
   <em>Knowledge-Based Systems</em> <vol>120</vol>, pp. 1-3, 2017 <a href="http://bufferkdtree.readthedocs.io" class="sup">source code</a>
 </div>
 
 
 <div class=publication>
-Jan Kremer, Kristoffer Stensbo-Smidt, Fabian Gieseke, Kim
+Jan Kremer, Kristoffer Stensbo-Smidt, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Kim
   Steenstrup Pedersen, and Christian Igel.
   <a href="paper/BUBDMLaIAfA.pdf">Big Universe, Big Data: Machine Learning and Image Analysis for Astronomy</a>.
   <em>IEEE Intelligent Systems</em> <vol>32</vol>(2), pp. 16-22, 2017
@@ -125,7 +126,7 @@ Michiel Kallenberg, Kersten Petersen, Mads Nielsen, Andrew Y. Ng, Pengfei Diao, 
 
 
 <div class=publication>
-  Kristoffer Stensbo-Smidt, Fabian Gieseke, Christian Igel, Andrew
+  Kristoffer Stensbo-Smidt, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Christian Igel, Andrew
   Zirm, and
     Kim Steenstrup Pedersen. 
 Sacrificing Information for the Greater Good: How to Select
@@ -163,7 +164,7 @@ Prior, and Christian Igel.  <a href="paper/IOoLUSDFEaCfNTM.pdf">Integrated optim
 
 
 <div class=publication>
-Fabian Gieseke, Cosmin Eugen Oancea, Ashish Mahabal, Christian
+<a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Eugen Oancea, Ashish Mahabal, Christian
 Igel, and Tom Heskes. Bigger Buffer k-d Trees
 on Multi-Many-Core Systems.
 <em>Big Data & Deep Learning in High Performance Computing</em>,
@@ -186,8 +187,7 @@ P. Timberg, eds.:
 </div>
 
 
-<div class=publication><img src="images/CMA_cartoon.gif"  align="right" vspace="10"
-  hspace="20" width="90" alt="[CMA-ES]">
+<div class=publication><img src="images/CMA_cartoon.gif"  align="right" style="margin: 0px 10px 10px 10px" width="100" alt="[CMA-ES]">
   Oswin Krause, D&iacute;dac R. Arbon&egrave;s, and Christian Igel.
   <a href="paper/CMA-ESwOCUaSC.pdf">CMA-ES with Optimal Covariance Update and Storage Complexity</a>.
   <em>Advances in Neural Information Processing Systems (NIPS)</em>,
@@ -210,7 +210,7 @@ Oswin Krause, Tobias Glasmachers, Nikolaus Hansen, and Christian Igel. <a href="
   2016, pp. 1177-1184, ACM, 2016</div>
 
 <div class=publication>
-Kai Lars Polsterer, Fabian Gieseke, 
+Kai Lars Polsterer, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, 
   Christian Igel, Bernd Doser, and Nikos Gianniotis.
 Parallelized rotation and flipping INvariant Kohonen maps (PINK) on
   GPUs.
@@ -229,7 +229,7 @@ and Machine Learning (ESANN 2016)</em>, pp. 405-410, Belgium: i6doc.com, 2016
   pp. 102–117, 2015</div>
 
   
-<div class=publication>Jan Kremer, Fabian Gieseke, Kim Steenstrup
+<div class=publication>Jan Kremer, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Kim Steenstrup
   Pedersen, and Christian Igel.  <a href="paper/NNDREfLSAiA.pdf">Nearest Neighbor Density 
 Ratio Estimation for Large-Scale Applications in
   Astronomy</a>. <em>Astronomy and Computing</em> <vol>12</vol>,
@@ -241,7 +241,7 @@ Ratio Estimation for Large-Scale Applications in
 <em>JMLR W&CP</em> <vol>38</vol> (AISTATS), pp. 259-267, 2015</div>
 
 
-<div class=publication>Kai Lars Polsterer, Fabian Gieseke, and
+<div class=publication>Kai Lars Polsterer, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, and
   Christian Igel. Automatic classification of galaxies via machine
   learning techniques: Parallelized Rotation/Flipping INvariant Kohonen Maps (PINK). In A. R. Taylor and E. Rosolowsky, eds.: <em>Astronomical Data Analysis Software and
   Systems (ADASS XXVI)</em>, pp. 81-86. Astronomical Society of the Pacific, ASP Conference Series <vol>495</vol>, 2015 <em>Best Poster Award</em> </div>
@@ -309,7 +309,7 @@ and Machine Learning (ESANN 2014)</em>, pp. 87-92, Belgium: i6doc.com, 2014
 </div>
 
  
-  <div class=publication>Kai Lars Polsterer, Fabian Gieseke, Christian Igel, and Tomotsugu Goto.
+  <div class=publication>Kai Lars Polsterer, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Christian Igel, and Tomotsugu Goto.
 Improving the Performance of Photometric Regression Models via Massive Parallel Feature Selection. In N. Manset and P. Forshay, eds.:
 <em>23rd Annual Astronomical Data Analysis Software and Systems
     Conference (ADASS XXIII)</em>,  pp. 425-428,
@@ -333,7 +333,8 @@ In E. E. Bron, S. Klein, M. Smits, J. C. van Swieten, and
 <a name="y13"></a>
 <h4>2013</h4>
 
-<div class=publication></a>
+<div class=publication></a><img alt="[Contributing hypervolume]"
+style="margin: 0px 10px 20px 10px"  width="150" align=right src="images/ContributedHypervolumeANew.png" border=0>
 Karl Bringmann, Tobias Friedrich, Christian Igel, and Thomas Vo&szlig.
 <a href="paper/SUM-OObMCA.pdf">Speeding Up Many-Objective Optimization by Monte Carlo
   Approximations</a>. <em>Artificial Intelligence</em> <vol>204</vol>,
@@ -346,7 +347,7 @@ Karl Bringmann, Tobias Friedrich, Christian Igel, and Thomas Vo&szlig.
  </div>
 
  
- <div class=publication>Fabian Gieseke, Christian Igel, and Tapio
+ <div class=publication><a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Christian Igel, and Tapio
   Pahikkala. <a href="http://jmlr.org/proceedings/papers/v29/Gieseke13.pdf">Polynomial runtime bounds for fixed-rank unsupervised least-squares classification</a>. <em>JMLR W&CP</em> <vol>29</vol> (ACML),
   pp. 62-71, 2013</div>
 
@@ -739,7 +740,7 @@ Order SMO Improves SVM Online and Active Learning</a>.
 <em>Neural Computation</em> <vol>20</vol>(2), pp. 374-382, 2008
 <a href="downloads.html#solasvm" class="sup">source code</a></div>
 
-<div class=publication><img alt="[Shark]" vspace="10" hspace="20"  width="90" align=right src="images/SharkLogo.png" border=0> Christian Igel, Verena Heidrich-Meisner, and <a
+<div class=publication><img alt="[Shark]" style="margin: 0px 10px 10px 10px"  width="100" align=right src="images/SharkLogo.png" border=0> Christian Igel, Verena Heidrich-Meisner, and <a
 href="http://www.ini.rub.de/PEOPLE/glasmtbl/">Tobias
 Glasmachers</a>.  <a href="http://jmlr.csail.mit.edu/papers/volume9/igel08a/igel08a.pdf">Shark</a>.
 <em>Journal of Machine Learning Research</em> <vol>9</vol>, pp. 993-996,
@@ -817,7 +818,7 @@ Optimization</a>. <em>Evolutionary Computation</em> <vol>15</vol>(1), pp. 1-28, 
 <a href="downloads.html#MOCMA" class="sup">source code</a></div>
 
 <div class=publication><img src="images/TCBB-0022-0206-Fig1.jpg"  align="right"
-vspace="10" hspace="20" width="90" alt="geometrical view on kernel-target
+style="margin: 0px 10px 10px 10px" width="100" alt="geometrical view on kernel-target
 alignment used to adapt kernels for TIS detection">Christian Igel, <a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a>, Britta
 Mersch, Nico Pfeifer, and <a href="http://gobics.de/peter">Peter
 Meinicke</a>. <a href="paper/GBOoKTAfSKAtBGSD.pdf">Gradient-based Optimization of Kernel-Target Alignment
@@ -891,7 +892,7 @@ Intelligent Systems (HIS 2007)</em>, pp. 222-227, IEEE Computer Society, 2007</d
 <h4>2006</h4>
 
 <div class=publication><img src="images/jmlr05-215-fig4.jpg"
-  align="right" vspace="10" hspace="20" width="90" alt="[feasible region of optimization problem]"><a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a> and Christian Igel.
+  align="right" style="margin: 10px 10px 10px 10px" width="150" alt="[feasible region of optimization problem]"><a href="https://www.ini.rub.de/the_institute/people/tobias-glasmachers/">Tobias Glasmachers</a> and Christian Igel.
 <a href="http://jmlr.csail.mit.edu/papers/volume7/glasmachers06a/glasmachers06a.pdf">Maximum-Gain Working Set Selection for SVMs</a>. <em>Journal of Machine
 Learning Research</em> <vol>7</vol>,  pp. 1437-1466, 2006 <a href="downloads.html#wss" class="sup">source code and supplementary information</a></div>
 
