--- a/downloads.html
+++ b/downloads.html
@@ -30,19 +30,20 @@
  
 <a name="bufferkdtree"></a> 
 <h2>bufferkdtree</h2>
-<a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]" vspace="10" hspace="20"  width="200" align=right src="http://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
+<a href="http://bufferkdtree.readthedocs.io"><img alt="[bufferkdtree]"
+style="margin: 10px 10px 20px 10px"  width="200" align=right src="http://bufferkdtree.readthedocs.io/en/stable/_images/bufferkdtree.png" border=0></a>
 Download <a href="http://bufferkdtree.readthedocs.io">bufferkdtree</a>
 for blistering fast 
 nearest neighbor seach on GPUs.
 Comes with a Python frontend.
 <h3>Paper describing the package</h3> 
 <div class=publication>
-  Fabian Gieseke, Cosmin Oancea, and Christian  Igel.
+  <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Oancea, and Christian  Igel.
  bufferkdtree: A Python Library for Massive Nearest Neighbor Queries on Multi-Many-Core Devices.
   <em>Knowledge-Based Systems</em> <vol>120</vol>, pp. 1-3, 2017
 </div>
 <div class=publication>
-Fabian Gieseke, Cosmin Eugen Oancea, Ashish Mahabal, Christian
+<a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Cosmin Eugen Oancea, Ashish Mahabal, Christian
 Igel, and Tom Heskes. Bigger Buffer k-d Trees
 on Multi-Many-Core Systems.
 <em>Big Data & Deep Learning in High Performance Computing</em>, pp. 172–180. Springer-Verlag, 2016.
@@ -100,7 +101,7 @@ Go to <a href="https://github.com/kremerj/nnratio">nnratio</a> for a
     nearest neighbor density ratio estimator implemented in Python.
 
 <h3>Paper describing the package</h3> 
-<div class=publication>Jan Kremer, Fabian Gieseke, Kim Steenstrup
+<div class=publication>Jan Kremer, <a href="http://www.fabiangieseke.de">Fabian Gieseke</a>, Kim Steenstrup
   Pedersen, and Christian Igel.  <a href="paper/NNDREfLSAiA.pdf">Nearest Neighbor Density 
 Ratio Estimation for Large-Scale Applications in
   Astronomy</a>. <em>Astronomy and Computing</em> <vol>12</vol>, pp. 67-72, 2015</div>
