changed address table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 <p><img src="images/CSUPicture.jpeg" style="height: 180px;
-margin: 0px 50px 100px 0px;" align="right" alt="Image of Me"> </p>
+margin: 0px 00px 100px 0px;" align="right" alt="Image of Me"> </p>
 <h1>Christian Igel</h1>
 Professor, Dr. habil.
 
@@ -24,15 +24,15 @@ Professor, Dr. habil.
 <dl>
   <table cellspacing="0" cellpadding="0" nosave="">
     <tbody>
-      <tr><td>Office address:</td></tr>
-      <tr><td>University of Copenhagen</td></tr>
-      <tr><td>Department of Computer Science</td></tr>
-      <tr><td>Sigurdsgade 41</td></tr>
-      <tr><td>2200 K&#248;benhavn N</td></tr>
+      <tr><td>Office address:</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Mail address:</tr>
+      <tr><td>University of Copenhagen</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>University of Copenhagen</td></tr>
+      <tr><td>Department of Computer Science</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Department of Computer Science</td></tr>
+      <tr><td>Sigurdsgade 41</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>Universitetsparken 5</td></tr>
+      <tr><td>2200 K&#248;benhavn N</td><td>&nbsp;&nbsp;&nbsp;&nbsp;</td><td>2100 K&#248;benhavn &Oslash;</td></tr>
     </tbody>
   </table>
   <br>
-  <table cellspacing="0" cellpadding="0" nosave="">
+<!--  <table cellspacing="0" cellpadding="0" nosave="">
     <tbody> 
       <tr><td>Mail address:</td></tr>
       <tr><td>University of Copenhagen</td></tr>
@@ -41,7 +41,7 @@ Professor, Dr. habil.
       <tr><td>2100 K&#248;benhavn &Oslash;</td></tr>
     </tbody>
   </table>
-  <br>
+  <br> -->
   <table cellspacing="0" cellpadding="0" nosave="">
     <tbody>
       <tr>
