--- a/downloads.html
+++ b/downloads.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<div id="page-wrap">
 <div class="sidenav">
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
@@ -25,7 +26,7 @@
 </div>
 </div>
 
-
+<div id="inner-page">
 <h1>Downloads</h1>
  
 <a name="bufferkdtree"></a> 
@@ -483,6 +484,9 @@ and Interfaces</em> <vol>16</vol>(3), pp. 265-278, 1994.
 	International Conference on Neural Networks</em>, pp.
 	586-591, IEEE Press, 1993
 </div> 
- </body>
+
+</div>
+</div>
+</body>
 </html>
 
