--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 
 <body>
+<div id="page-wrap">
 <div class="sidenav">
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
 </div>
-
-
+<div id="inner-page">
 <p><img src="images/CSUPicture.jpeg" style="height: 180px;
 margin: 0px 00px 100px 0px;" align="right" alt="Image of Me"> </p>
 <h1>Christian Igel</h1>
@@ -64,21 +64,21 @@ Professor, Dr. habil.
  </table>
 </dl>
 <h3>Short CV</h3>
-<p  style="line-height:normal">I studied Computer Science at the Technical University of Dortmund, Germany. In 2002, I received my Doctoral degree from the Faculty of Technology, Bielefeld University, Germany, and in 2010 my Habilitation degree from the Department of Electrical Engineering and Information Sciences, Ruhr-University Bochum, Germany.
+<p>I studied Computer Science at the Technical University of Dortmund, Germany. In 2002, I received my Doctoral degree from the Faculty of Technology, Bielefeld University, Germany, and in 2010 my Habilitation degree from the Department of Electrical Engineering and Information Sciences, Ruhr-University Bochum, Germany.
 From 2003 to 2010, I was a Juniorprofessor for Optimization of
   Adaptive Systems at the <a href="http://www.ini.rub.de">Institut
   f&uuml;r Neuroinformatik</a>, Ruhr-University Bochum.  In October
   2010, I was appointed professor with special duties in machine
 learning at DIKU. Since December 2014 I am a full professor at DIKU.</p>
 
-<p style="line-height:normal">I am an Editor of the German Journal on Artificial Intelligence (KI)
+<p>I am an Editor of the German Journal on Artificial Intelligence (KI)
 and an Associate Editor of the Evolutionary Computation Journal (ECJ) and the Artificial Intelligence Journal (AIJ).</p>
 
 <h3>Research Interests</h3>
 My main research area is Machine Learning.<p>
 
-Currently I am particularly interested in
-<ul class="imggrp">
+Currently, I am particularly interested in
+<ul>
 <li>support vector machines and other kernel-based methods,
 <li>evolution strategies for  single- and multi-objective optimization
   and reinforcement learning,
@@ -203,5 +203,7 @@ Glasmachers</a> and Christian Igel. <a
 Working Set Selection for SVMs</a>. <em>Journal of Machine Learning
 Research</em> <vol>7</vol>, pp. 1437-1466, 2006</div> 
 
+</div>
+</div>
 </body>
 </html>
