--- a/publications.html
+++ b/publications.html
@@ -8,12 +8,13 @@
 
 
 <body>
+<div id="page-wrap">
 <div class="sidenav">
   <a href="index.html">About</a>
   <a href="publications.html">Publications</a>
   <a href="downloads.html">Downloads</a>
 </div>
-
+<div id="inner-page">
 
 <h1>Publications by Christian Igel</h1>
 
@@ -1525,6 +1526,7 @@ holders. All persons copying this information are expected to adhere
 to the terms and constraints invoked by each author's copyright.  In
 many cases, these works may not be reposted without the explicit
 permission of the copyright holder.</div>
-
+</div>
+</div>
 </body>
 </html>
