--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 </div>
 <div id="inner-page">
 <p><img src="images/CSUPicture.jpeg" style="height: 180px;
-margin: 0px 00px 100px 0px;" align="right" alt="Image of Me"> </p>
+margin: 0px 00px 100px 0px; border-radius: 10px;" align="right" alt="Image of Me"> </p>
 <h1>Christian Igel</h1>
 Professor, Dr. habil.
-
 
 <dl>
   <table cellspacing="0" cellpadding="0" nosave="">
