added centre link

--- a/index.html
+++ b/index.html
@@ -63,15 +63,22 @@ Professor, Dr. habil.
  </table>
 </dl>
 <h3>Short CV</h3>
-<p>I studied Computer Science at the Technical University of Dortmund, Germany. In 2002, I received my Doctoral degree from the Faculty of Technology, Bielefeld University, Germany, and in 2010 my Habilitation degree from the Department of Electrical Engineering and Information Sciences, Ruhr-University Bochum, Germany.
+<p>I am  professor at <a href="http://diku.kd">DIKU</a>, the <a href="http://diku.kd">Department of
+  Computer Science</a> at the <a href="http://ku.dk">University of Copenhagen</a>.
+I studied Computer Science at the Technical University of Dortmund, Germany. In 2002, I received my Doctoral degree from the Faculty of Technology, Bielefeld University, Germany, and in 2010 my Habilitation degree from the Department of Electrical Engineering and Information Sciences, Ruhr-University Bochum, Germany.
 From 2003 to 2010, I was a Juniorprofessor for Optimization of
   Adaptive Systems at the <a href="http://www.ini.rub.de">Institut
   f&uuml;r Neuroinformatik</a>, Ruhr-University Bochum.  In October
   2010, I was appointed professor with special duties in machine
 learning at DIKU. Since December 2014 I am a full professor at DIKU.</p>
 
-<p>I am an Editor of the German Journal on Artificial Intelligence (KI)
-and an Associate Editor of the Evolutionary Computation Journal (ECJ) and the Artificial Intelligence Journal (AIJ).</p>
+<p>Among others, I serve as an Editor of the <a href="http://www.springer.com/computer/ai/journal/13218">German Journal on Artificial Intelligence (KI)</a>
+and an Associate Editor of the <a
+href="https://www.mitpressjournals.org/loi/evco">Evolutionary
+Computation Journal</a> (ECJ) and the <a href="https://www.journals.elsevier.com/artificial-intelligence/">Artificial Intelligence Journal</a> (AIJ).</p>
+
+I am constituent CEO of the <a href="http://ai.ku.dk">SCIENCE AI Centre</a>.
+
 
 <h3>Research Interests</h3>
 My main research area is Machine Learning.<p>
